--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,16 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/css/layout.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/css/media-queries.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/css/magnific-popup.css">
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-180530657-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
+      gtag('config', 'UA-180530657-1');
+    </script>
 
     <title>As_sqr Portfolio</title>
   </head>
