--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <meta property="og:title" content="As_sqr Portfolio" />
   <meta property="og:description" content="As_sqr のポートフォリオサイトです" />
   <meta property="og:site_name" content="As_sqr Portfolio" />
-  <meta property="og:image" content="%PUBLIC_URL%/images/utas.jpeg" />
+  <meta property="og:image" content="https://assqr.github.io/as-sqr-portfolio/images/utas.jpeg" />
   <meta name="twitter:card" content="summary_large_image" />
   <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
